Prevent overflow of grid columns

--- a/resources/scss/ceres/widgets/Grid/_grid-widget.scss
+++ b/resources/scss/ceres/widgets/Grid/_grid-widget.scss
@@ -7,6 +7,7 @@
         > div
         {
             flex: 1;
+            max-width: 100%;
         }
     }
 
